add - fotos, svgs, header, footer e rotas de login

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Dogs - Rede Social para cachorros." />
     <title>Dogs</title>
   </head>
-  <body>
+  <body class='pt-16'>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
