--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#fb1">
     <meta name="description" content="Dogs - Rede Social para cachorros." />
     <title>Dogs</title>
   </head>
   <body class='pt-16 font-primary'>
+    <noscript>É necessário habilitar o JavaScript para visualizar este site.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
